--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,23 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
+{% block content %}
+<div class="jumbotron">
+   <h1>ZMapper</h1>
+   <p>ZMapper is a research tool for managing ZMap scans.</p>
+   <blockquote>
+      <p>
+      ZMap is an open-source network scanner that enables researchers to easily perform Internet-wide network studies. With a single machine and a well provisioned network uplink, ZMap is capable of performing a complete scan of the IPv4 address space in under 45 minutes, approaching the theoretical limit of gigabit Ethernet.
+      </p>
+      <p>
+      ZMap can be used to study protocol adoption over time, monitor service availability, and help us better understand large systems distributed across the Internet.
+      </p>
+      <footer>
+         From <a href="https://zmap.io/index.html">ZMap Homepage</a>
+      </footer>
+   </blockquote>
+   <p>
+   <a href="https://zmap.io/index.html" target="_blank" class="btn btn-primary btn-lg" role="button">Learn more</a>
+   <a href="mailto:guenther.andrew.j@gmail.com?subject=ZMapper%20Exclusion%20Request&body=IP%20Address%3A%20%3Crequested%20ip%28s%29%20in%20CIDR%20notation%3E" target="_blank" class="btn btn-danger btn-lg" role="button">Exclude Me</a>
+   </p>
+</div>
+{% endblock %}
