--- a/templates/new.html
+++ b/templates/new.html
@@ -28,7 +28,7 @@
          </div>
          <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onClick="$.post('/jobs', $('#new-job').serialize()); location.href='/jobs'">Launch Job</button>
+            <button type="button" class="btn btn-primary" onClick="$.post('/jobs', $('#new-job').serialize(), function(){location.href='/jobs';})">Launch Job</button>
          </div>
       </div>
    </div>
